2002-07-13  Christopher Faylor  <cgf@redhat.com>

	* dcrt0.cc (dll_crt0_1): Delay closing of some handles until cygheap
	has been set up.
	(break_here): New function, for debugging.
	(initial_env): Add program name to "Sleeping" message.  Implement new
	"CYGWIN_DEBUG" environment variable option.
	* exceptions.cc (debugger_command): Add argument to dumper call.
	* strace.cc (strace::hello): Use winpid if cygwin pid is unavailable.
	(strace::vsprntf): Ditto.

2002-07-13  Christopher Faylor  <cgf@redhat.com>

	* debug.h (handle_list): Move here from debug.cc.  Add "inherit" flag
	functionality.
	* cygheap.cc (init_cheap): Move cygheap_max calculation to _csbrk.
	(_csbrk): Reorganize to not assume first allocation is <= 1 page.
	(cygheap_setup_for_child): Mark protected handle as inheritable.
	* cygheap.h (cygheap_debug): New struct.
	(init_cygheap): Add new structure when debugging.
	* dcrt0.cc (dll_crt0_1): Remove call to debug_init.  Close ppid_handle
	here, if appropriate.  Don't protect subproc_ready, since it is already
	protected in the parent.  Call memory_init prior to ProtectHandle to
	ensure that cygheap is set up.  Call debug_fixup_after_fork_exec when
	appropriate.
	(_dll_crt0): Don't close ppid_handle here.
	* debug.cc: Use cygheap debug structure rather than static elements
	throughout.
	(add_handle): Don't issue a warning if attempt to protect handle in
	exactly the same way from exactly the same place.  Add pid info to
	warning output.  Accept additional argument controlling whether handle
	is to be inherited.  Add pid to stored information.
	(debug_fixup_after_fork_exec): Renamed from debug_fixup_after_fork.
	Reorganize to avoid erroneously skipping handles.
	(mark_closed): Add pid info to warning output.
	(setclexec): Rename from setclexec_pid.
	* fhandler.cc (fhandler_base::get_default_fmode): Minor reorg.
	(fhandler_base::fstat): Add debugging output.
	(fhandler_base::set_inheritance): Call setclexec rather than
	setclexec_pid.